--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 fastapi
-pandas
-setuptools
-numpy
-datetime
-sklearn
-pyarrow
+pandas==2.2.1
+setuptools==70.1.1
+numpy==1.26.4
+scikit-learn==1.5.0
+pyarrow==16.1.0
 uvicorn[standard]
